# CranePro-AIV1

./: Bridge Crane Inspection App Development Report_ An.md  Bridge_Crane_Inspection_App_Architecture.md  Enhanced_Asset_Commands_Test_Architecture.md  Location_Commands_Implementation_Analysis.md  Location_Management_Implementation_Plan.md  Phase_3_Development_Plan.md  README.md
.github/: copilot-instructions.md
.specstory/history/: 2025-06-09_15-08-review-the-app-development-report-file-and-let's-b.md  2025-06-10_19-33-let's-address-the-following-error-could-not-compi.md
crane-pro-app/: package-lock.json  package.json
crane-pro-app/src-tauri/: Cargo.toml  tauri.conf.json
crane-pro-app/src-tauri/src/: database.rs  errors.rs  lib.rs  main.rs  models.rs  security.rs  services.rs
crane-pro-app/src-tauri/src/api/: mod.rs  requests.rs  responses.rs
crane-pro-app/src-tauri/src/api/tests/: mod.rs
crane-pro-app/src-tauri/src/commands/: asset_commands.rs  compliance_commands.rs  inspection_commands.rs  location_commands.rs  media_commands.rs  mod.rs  report_commands.rs  user_commands.rs
crane-pro-app/src-tauri/src/commands/tests/: mod.rs
crane-pro-app/src-tauri/src/database/: core.rs  migrations.rs  mod.rs
crane-pro-app/src-tauri/src/middleware/: auth.rs  mod.rs
crane-pro-app/src-tauri/src/services/tests/: mod.rs
crane-pro-app/src-tauri/src/test_fixtures/: mod.rs  tests.rs
