[package]
name = "crane-pro-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "crane_pro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri with enhanced features
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Tauri plugins for enhanced functionality
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
# tauri-plugin-stronghold = "2"  # Commented out temporarily due to build issues with spaces in path

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and data handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

# Security
ring = "0.17"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Image processing
image = { version = "0.24", features = ["jpeg", "png", "tiff"] }
kamadak-exif = "0.5"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography for checksums
sha2 = "0.10"

[dev-dependencies]
# Testing dependencies for enhanced test infrastructure
tokio-test = "0.4"      # Async testing utilities
mockall = "0.11"        # Advanced mocking capabilities
tempfile = "3.0"        # Temporary file management
assert_matches = "1.5"  # Pattern matching assertions
proptest = "1.0"        # Property-based testing

